# TestMaster

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TestMaster.bat  docker-compose.yml  locustfile.py  pyproject.toml  requirements.txt  test_redis.py
.github/workflows/: ci-cd.yml
docker/: Dockerfile  docker-compose.yml
docs/: USER_GUIDE.md
scripts/: install.bat  install.sh  run.sh
src/: app.py  celery_worker.py  config.py  logger.py
src/core/: auth.py  config_db.py  data_generator.py  executor.py  git_integration.py  tester.py
src/static/css/: custom.css
src/static/js/: blockly_blocks.js
src/templates/: base.html  connection_settings.html  control_panel.html  editor.html  load_testing.html  login.html  test_chain_editor.html
src/tests/: test_api.py  test_db.py  test_ui.py
