[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testmaster"
version = "0.1.0"
description = "End-to-end testing framework with web interface"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "flask>=3.0.0",
    "celery>=5.3.6",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.25",
    "faker>=23.2.0",
    "locust>=2.20.0",
]

[project.optional-dependencies]
dev = ["pytest", "playwright", "locust"]

[tool.setuptools.packages.find]
where = ["src"]